# AssetArchive-Dev

./: .eslintrc.json  .gitignore  LICENSE  build.sh  build_arm64.sh  build_macos.sh  build_windows.bat  fetch.sh  index.html  out  package-lock.json  package.json  patch.sh  rsync_exclude.txt  sync.sh  tailwind.config.ts  vite.config.js
patches/: @pixi+core+7.3.1.patch  @pixi+core+7.3.2.patch  @pixi+sprite+7.3.2.patch  pixi.js+7.3.1.patch
src/: App.css  App.jsx  App.tsx  __App_test.jsx  animproject.ts  assetdesc.ts  asyncsearcher.ts  asyncsearcher_v1.ts  base64_util.ts  blueprint.css  clipboard.ts  datatype.ts  facing.js  facing.ts  format.ts  global_meilisearch.ts  hooks.js  hooks.ts  image.d.ts  main.jsx  main.tsx  mainRoutes.jsx  mainRoutes.tsx  meilisearch_synonyms.ts  pixiconfig.ts  polyfill.ts  postprocess.ts  renderer_fuse_worker.mts  renderer_predict.ts  renderer_predict_worker.ts  renderer_predict_worker_old.ts  routelist.jsx  searchengine.js  searchengine.ts  searchengine_worker.js  searchengine_worker.mts  searchengine_worker.ts  searchengine_worker_v1.ts  smallhash.ts  strings.js  (+6 more)
src-tauri/: .taurignore  1.txt  Cargo.toml  default.profraw  fev.json  log.txt  note-fmod.md  tauri.conf.json  tauri.windows.conf.json
src-tauri/.github/workflows/: CI.yml
src-tauri/capabilities/: migrated.json
src-tauri/ffmpeg-sidecar/examples/mytest/: Cargo.toml
src-tauri/ffmpeg-sidecar/examples/mytest/src/: main.rs
src-tauri/fmod/: Cargo.toml  build.rs  build.sh  run.sh  server.py
src-tauri/fmod/src/: lib.rs  main.rs
src-tauri/fmod_shm/: Cargo.toml  build.rs
src-tauri/fmod_shm/src/: fmod.rs  lib.rs  main-.rs
src-tauri/icons/: icon.icns
src-tauri/include_lua/: Cargo.toml
src-tauri/include_lua/src/: lib.rs
src-tauri/include_lua_macro/: Cargo.toml
src-tauri/include_lua_macro/src/: lib.rs
src-tauri/quicklook-files/: bernie_dog.dyn  lw_homura.txt  postprocess_base.vs
src-tauri/quicklook-files/dst_menu_waterlogged/: atlas-1.tex
src-tauri/quicklook-files/homura_clock/: atlas-0.tex
src-tauri/rlua-lua51-sys/: build.rs
src-tauri/rlua-lua51-sys-0.1.7/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/rlua-lua51-sys-0.1.7/lua-5.1.5/src/: lbaselib.c
src-tauri/rlua-lua51-sys/lua-5.1.5/src/: luaconf.h
src-tauri/src/: algorithm.rs  args.rs  audio.rs  es.rs  fastindex.rs  ffmpeg.rs  filesystem.rs  fmod.rs  fmodparse.rs  image-v0.rs  image.rs  main.rs  meilisearch.rs  misc.rs  note.rs  quicklook.rs  select.rs  test.py  unzip.rs
src-tauri/src/scripts/: .taurignore  affine.lua  animproject.lua  asset.lua  assetindex.lua  assetloader.lua  assetprovider.lua  class.lua  cli.lua  cli_ffmpeg.lua  color.lua  constants.lua  debugprint.lua  encrypt.lua  entry.lua  facing.lua  ffmpeg.lua  filesystem.lua  hashlib.lua  image_test.py  ipc.lua  json.lua  main.lua  persistant.lua  postprocessproject.lua  quicklook.lua  quicklook_0.lua  renderer.lua  richtext.lua  slaxdom.lua  test.lua  util.lua
src-tauri/src/scripts/anim_template/: attack.lua  beefalo.lua  firesuppressor_placer.lua  treasure_chest.lua  tree.lua
src-tauri/src/scripts/compiler/: amain.0.lua  amain.lua  cmain.lua  predefs.lua  preview_gen.lua  watch.py
src-tauri/src/scripts/compiler/animpreset/: pmain.lua
src-tauri/src/scripts/compiler/assetdesc/: dmain.lua  human.lua  minimap_desc.lua  minimap_ref.lua  run.lua
src-tauri/src/scripts/compiler/entrydesc/: emain.lua  predef.lua  tag.lua
src-tauri/src/scripts/compiler/output/: anim_preview_list.lua  animpreset.lua  assetdesc.lua  entry.lua  entry_tags.lua
src-tauri/src/scripts/postprocess_template/: fullmoon.lua  insane.lua  molehat.lua  season.lua
src/components/AccessableItem/: index.module.css  index.tsx  index_v1.module.css  index_v1.tsx
src/components/AliasTitle/: index.tsx
src/components/AnimCore_Canvas/: animcore.ts  animcore_v0.ts  animhook.ts  animstate.ts  index.tsx  renderparams.ts
src/components/AnimPlayerWidget/: index.module.css  index.tsx
src/components/AnimProjectInitFromParam/: index.module.css  index.tsx
src/components/AnimProjectPreview/: index.tsx
src/components/AnimProjectSetter/: index.tsx
src/components/AnimQuickLook/: index.tsx  preset.ts  util.ts  util_v0.ts
src/components/ApiArgInput/: index.tsx  predicthooks.ts
src/components/ApiList/: index.module.css  index.tsx
src/components/ApiOperator/: index.module.css  index.tsx
src/components/ApiPicker/: api_doc.tsx  index.module.css  index.tsx
src/components/AppFirstLaunch/: index.module.css  index.tsx
src/components/AppFmodHandler/: index.tsx
src/components/AppInit/: index.jsx  index.tsx
src/components/AppMaxView/: index.module.css  index.tsx
src/components/AppQuickSettings/: index.tsx
src/components/AppRendererInit/: index.tsx
src/components/AppToaster/: index.jsx  index.tsx
src/components/ArgInput/: index.module.css  index.tsx  util.ts
src/components/AssetDesc/: index.module.css  index.tsx
src/components/AssetDescFormatter/: index.tsx
src/components/AssetFilepath/: index.tsx
src/components/AssetManager/: index copy.tsx.js  index.tsx
src/components/AtlasUVMapViewer/: index.module.css  index.tsx
src/components/Background/: index.tsx
src/components/BatchDownloadButton/: index.tsx
src/components/CCMapViewer/: index.tsx
src/redux/: reducers.js  reducers.ts  store.js  store.ts
wiki/: main.py
(+107 files in other folders)
