[workspace]
members = ["include_lua", "include_lua_macro"]

[package]
name = "asset-archive"
version = "0.0.0"
description = "A Tauri App"
authors = ["lw"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["clipboard-all", "devtools", "dialog-all", "notification-all", "shell-open", "updater", "window-center", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-size", "window-start-dragging", "window-unmaximize"] }
clap = "4.4.8"
clippers = "0.1.2"
num_cpus = "1.16.0"
walkdir = "2.3.3"
indicatif = "0.17.3"
filenamify = "0.1.0"
zune-inflate= { version="0.2.54",default-features=false,features= ["zlib"] }
bcndecode = "0.2.0"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
rlua = { version = "^0.19.4", default-features = false, features = ["lua-no-oslib", "builtin-lua51"] }
image = { version = "0.24.6", default-features = false, features = ["png", "gif"] }
curl = { version = "0.4.44", features = ["rustls"] }
webbrowser = { version = "0.8.11", features = ["hardened"] }
once_cell = "1.18.0"
sevenz-rust = "0.5.3"
libdeflater = "1.19.0"
base64 = "0.21.6"
# meilisearch-sdk = "0.24.3"
json = "0.12.4"
ffmpeg-sidecar = "0.5.1"
simplelog = "^0.12.0"
rand = "0.8"
md5 = "0.7.0"
log = "0.4"

include_lua = { path = "./include_lua" }
include_lua_macro = { path = "./include_lua_macro" }
include-crypt-bytes = "^0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
release = []

[patch.crates-io]
rlua-lua51-sys = { path = "rlua-lua51-sys" }

[profile.dev]
opt-level = 1
